// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardCount/> matches snapshot 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 gwXiGr"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 dgpiUM count"
      >
        11
      </div>
    </div>
  </span>
</div>
`;

exports[`<CardCount/> updates via props 1`] = `
<div>
  <span
    class="CartCount__AnimationStyles-sc-xxvp4g-1 gwXiGr"
  >
    <div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 dgpiUM count count-enter count-enter-active"
      >
        12
      </div>
      <div
        class="CartCount__Dot-sc-xxvp4g-0 dgpiUM count count-exit count-exit-active"
      >
        11
      </div>
    </div>
  </span>
</div>
`;
